--- a/templates/base.twig
+++ b/templates/base.twig
@@ -36,7 +36,7 @@
         ]
       };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
 
@@ -46,6 +46,9 @@
         {% block content %}{% endblock %}
     </div>
 
+    <link rel="stylesheet" href="{{ basePath }}css/modal.css">
+    <script src="{{ basePath }}js/modal.js"></script>
+    <script src="{{ basePath }}js/notifications.js"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
