--- a/templates/pages/historique.twig
+++ b/templates/pages/historique.twig
@@ -422,7 +422,7 @@ Chart.register(ChartZoom);
                     datasets: [
                         {
                             label: 'Consommation HP (kWh)',
-                            data: consoHPData,
+                            data: consoHCData,
                             borderColor: '#f97316', // orange-500
                             backgroundColor: 'rgba(249, 115, 22, 0.2)',
                             borderWidth: 2,
@@ -432,7 +432,7 @@ Chart.register(ChartZoom);
                         },
                         {
                             label: 'Consommation HC (kWh)',
-                            data: consoHCData,
+                            data: consoHPData,
                             borderColor: '#3b82f6', // blue-500
                             backgroundColor: 'rgba(59, 130, 246, 0.2)',
                             borderWidth: 2,
@@ -544,7 +544,7 @@ Chart.register(ChartZoom);
                 data: {
                     labels: ['Heures Creuses', 'Heures Pleines'],
                     datasets: [{
-                        data: [lastConsoHC, lastConsoHP],
+                        data: [lastConsoHP, lastConsoHC],
                         backgroundColor: ['#3b82f6', '#f97316'], // blue-500, orange-500
                         hoverOffset: 4
                     }]
